--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-server": "~20.0.0",
     "@angular/router": "~20.0.0",
     "@angular/ssr": "~20.0.0",
+    "@fontsource/vt323": "^5.2.6",
+    "@ngx-translate/core": "^16.0.4",
+    "@ngx-translate/http-loader": "^16.0.1",
     "express": "^4.21.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
@@ -26,11 +29,12 @@
     "@angular-devkit/build-angular": "~20.0.0",
     "@angular-devkit/core": "~20.0.0",
     "@angular-devkit/schematics": "~20.0.0",
+    "@angular/build": "~20.0.0",
     "@angular/cli": "~20.0.0",
     "@angular/compiler-cli": "~20.0.0",
     "@angular/language-service": "~20.0.0",
     "@eslint/js": "^9.8.0",
-    "@nx/angular": "21.2.0",
+    "@nx/angular": "^21.2.0",
     "@nx/cypress": "21.2.0",
     "@nx/eslint": "21.2.0",
     "@nx/eslint-plugin": "21.2.0",
@@ -42,6 +46,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
