--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "~20.0.0",
     "@angular/ssr": "~20.0.0",
     "@fontsource/vt323": "^5.2.6",
+    "@ngrx/schematics": "^19.2.1",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "express": "^4.21.2",
